@@ -1,3 +1,5 @@
+import pytest
+
 
 class API:
     def __init__(self, d):
